FIX: streaming broken in bedrock when chunks are not aligned
Also

- Stop caching llm list - this cause llm list in persona to be incorrect
- Add more UI to debug screen so you can properly see raw response

--- a/assets/stylesheets/modules/ai-bot/common/bot-replies.scss
+++ b/assets/stylesheets/modules/ai-bot/common/bot-replies.scss
@@ -161,3 +161,9 @@ span.onebox-ai-llm-title {
 .ai-debug-modal__tokens span {
   display: block;
 }
+
+.d-modal ul.ai-debug-modal__nav {
+  margin: 0 0 1em;
+  padding: 0;
+  border-bottom: none;
+}
